<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ModelPendingFragment">
    <TextView
        android:id="@+id/pendingModelHelpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:text="@string/pending_model_help_text"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/refreshedStatusLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/refreshed_status_label"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/refreshStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refreshed_status_default"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/refresh_button"
        android:textAllCaps="false"
        android:textSize="24sp" />

</LinearLayout>
