<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/collectedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/collected_label"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/collectedCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextHttpServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/http_server_url"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/startPauseCollectionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_collection_button"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/sendHttpFeaturesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/send_features_http_button"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/compareHttpFeaturesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/compare_features_http_button"
            android:textAllCaps="false"
            android:textSize="24sp" />

    </LinearLayout>
</LinearLayout>