<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="7"
    tools:context=".fragments.FeatureCollectionFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/watch_animation"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3.5"
        app:lottie_autoPlay="false"
        app:lottie_fileName="training_light.json"
        app:lottie_loop="true"
        app:lottie_speed="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/collectedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/collected_label"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/collectedCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/uploadedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/uploaded_label"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/uploadedCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/startPauseCollectionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_collection_button"
            android:textAllCaps="false"
            android:textSize="24sp" />
        <Button
            android:id="@+id/addFeaturesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/add_features_button"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <Button
            android:id="@+id/trainModelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/train_model_button"
            android:textAllCaps="false"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>
